<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_bar">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/origin"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:textSize="22sp"/>

            <ImageView
                android:id="@+id/starting_position"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/destination"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:textSize="22sp"/>

            <ImageView
                android:id="@+id/destination_position"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/arrival_time"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/arrival_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="10h00"
                android:textColor="@color/text_color"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/routine_time"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/routine_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="00h45"
                android:textColor="@color/text_color"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/alarm_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_marginTop="10dp"
                android:capitalize="words"
                android:hint="@string/alarm_hint"
                android:textSize="18sp"/>

        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/gen_bt_sel"
            android:padding="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:tint="@color/text_color"
                android:src="@drawable/back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/back"
                android:textColor="@color/text_color"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/gen_bt_sel"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/done"
                android:textColor="@color/text_color"
                android:textSize="16sp"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:tint="@color/text_color"
                android:src="@drawable/next"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>