<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:gravity="center"
                android:textColor="@color/text_color"
                android:textSize="36sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_desc"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:textColor="@color/text_color"
                android:textSize="22sp"/>

        </LinearLayout>
        </ScrollView>

    <RelativeLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/gen_bt_sel"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/next"
                android:textColor="@color/text_color"
                android:textSize="22sp"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:tint="@color/text_color"
                android:src="@drawable/next"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>