<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/title_live"
        android:textColor="@color/text_color"
        android:textSize="22sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/bottom_bar"
        android:layout_below="@id/top_bar"
        android:id="@+id/map_container">

        <!-- The map fragments will go here -->
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/gen_bt_sel"
            android:padding="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:tint="@color/text_color"
                android:src="@drawable/back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/back"
                android:textColor="@color/text_color"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/gen_bt_sel"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/next"
                android:textColor="@color/text_color"
                android:textSize="16sp"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:tint="@color/text_color"
                android:src="@drawable/next"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>